--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,29 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
+body{
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sticky-container {
-    position: sticky;
+    position: fixed;
     top: 0;
-    z-index: 10;
+    left: 0;
+    z-index: 20;
+
+    width: 100%;
+
     background-color: rgba(256, 256, 256, 0.9);
 }
 .sticky-content {
     margin: 0;
-    padding: 10px;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,10 +34,19 @@ body {
 }
 
 .dropbtn {
+  background-color: #333;
   color: white;
+
   width: 40px;
+
+  padding: 10px 15px;
+  
   border: none;
+  border-radius: 10px;
   cursor: pointer;
+
+  font-weight: 600;
+  font-family: "Roboto Mono";
 }
 
 .dropdown {
@@ -46,6 +62,8 @@ body {
   z-index: 1;
   right: 0;
   font-weight: 600;
+  font-family: "Roboto Mono";
+  margin-top: 10px;
 }
 
 .dropdown-content a {
@@ -54,149 +72,47 @@ body {
   text-decoration: none;
   display: block;
   text-align: end;
-  font-size: 16px;
+  font-size:16px;
 }
 
-.dropdown-content a:hover {background-color: rgba(237, 240, 231, 0.6);}
+.dropdown-content a:hover {
+    background-color: #c2c2c234;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.section-1{
-    height: 100%;
-    background-color: #edf0e7;
-    padding: 5%;
-    position: relative;
+.main{
+    height: 100vh;
+
+    margin-top: 100px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @media (min-width: 768px){
+        margin-top: 0px;
+    }
 }
 
-.section-2{
-    height: 100%;
-    padding: 5%;
-    position: relative;
+.section-1{
+    width: 60%;
 }
 
 .title{
-    margin-top: 5%;
-    font-size: 30px;
-}
+    font-family: "Roboto Mono";
+    font-size: 2rem;
 
-.container{
-    display: flex;
-    flex-direction: column-reverse;
-    margin-top: 15%;
-}
-.article-name{
-    margin-top: 5%;
-    font-size:22px;
-}
-
-.text{
-    margin-top: 5%;
+    margin-bottom: 10px;
 }
 
 .paragraph{
-    margin-top: 2%;
+    margin-bottom: 7px;
 }
 
-.social-networks{
-    margin-top: 15px;
+.social-networks--img{
+    width: 35px;
 }
-
-.social-networks > a{
-    width: 40px;
-    margin-right: 5px;
-}
-
-@media (min-width: 768px){
-    .sticky-container {
-        position: sticky;
-        top: 0;
-        z-index: 60;
-        background-color: rgba(256, 256, 256, 0.9);
-        height: 10%;
-    }
-    .sticky-content {
-        margin: 0;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .contact{
-        font-size: 13px;
-    }
-    
-    .menu{
-        width: 40px;
-    }
-    
-    .section-1, .section-2{
-        background-color: #fff;
-        padding: 0;
-
-        position: relative;
-        height: 80vh;
-    }
-
-    .background{
-        position: absolute;
-        z-index: 10;
-        width: 70vw;
-        height: 85vh;
-        top: 0;
-        left: 0;
-
-        background-color: #edf0e7;
-    }
-
-    .title{
-        position: absolute;
-        z-index: 20;
-
-        left: 10%;
-        margin-top:2%;
-
-        font-size: 40px;
-    }
-
-    .container{
-        width: 80%;
-        position: absolute;
-        z-index: 20;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin-top: 10%;
-        left: 10%;
-        
-    }
-
-    .block-1{
-        width: 50%;
-    }
-
-    .article-name{
-        font-size: 22px;
-        line-height: 23px;
-    }
-
-    .text{
-        font-size: 14px;
-    }
-
-    .social-networks{
-        margin-top: 15px;
-    }
-    
-    .social-networks > img{
-        width: 40px;
-        margin-left: 5px;
-    }
-
-    
-}
-
-
-
