--- a/css/main_page.css
+++ b/css/main_page.css
@@ -5,20 +5,25 @@
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
-    background-color: #edf0e7;
-    font-size: 20%;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sticky-container {
-    position: sticky;
+    position: fixed;
     top: 0;
-    z-index: 10;
+    left: 0;
+    z-index: 20;
+
+    width: 100%;
+
     background-color: rgba(256, 256, 256, 0.9);
 }
 .sticky-content {
     margin: 0;
-    padding: 10px;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,10 +34,19 @@ body{
 }
 
 .dropbtn {
+  background-color: #333;
   color: white;
+
   width: 40px;
+
+  padding: 10px 15px;
+  
   border: none;
+  border-radius: 10px;
   cursor: pointer;
+
+  font-weight: 600;
+  font-family: "Roboto Mono";
 }
 
 .dropdown {
@@ -48,6 +62,8 @@ body{
   z-index: 1;
   right: 0;
   font-weight: 600;
+  font-family: "Roboto Mono";
+  margin-top: 10px;
 }
 
 .dropdown-content a {
@@ -59,112 +75,129 @@ body{
   font-size:16px;
 }
 
-.dropdown-content a:hover {background-color: rgba(237, 240, 231, 0.6);}
+.dropdown-content a:hover {
+    background-color: #c2c2c234;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.slide{
-    position: relative;
+.main-page--cover{
     height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
 }
 
-.blocks{
-    position: relative;
-    top: 10%;
-    left: 10%;
-    width: 80%;
+.main-page--cover--title{
+    font-size: 4rem;
+    font-family: "Roboto Mono";
+
+    @media (min-width: 768px){
+        font-size: 5rem;
+    }
 }
 
-.name{
-    font-size: 60px;
-    line-height: 55px;
-}
+.main-page--cover--job{
+    max-width: 80%;
 
-.job{
-    font-size: 20px;
+    font-size: 0.9rem;
     font-weight: 400;
+
+    text-transform: uppercase;
+
+    @media (min-width: 768px){
+        font-size: 1.2rem;
+    }
 }
 
-.social-networks{
-    margin-top: 15px;
+.main-page--highlights-title{
+    margin-inline: auto;
+    margin-bottom: 30px;
+    padding-block: 15px;
+
+    font-size: 2rem;
+    font-family: "Roboto Mono";
+
+    border-bottom: 2px solid black;
+    width: fit-content;
 }
 
-.social-networks > a{
-    width: 40px;
-    margin-right: 5px;
+.main-page--highlights--ul{
+    display: grid;
+    grid-template-columns: 1fr;
+
+    @media (min-width: 768px){
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media (min-width: 1024px){
+        grid-template-columns: 1fr 1fr 1fr;
+    }    
 }
 
-.block-2{
-    margin-top: 8%;
+.main-page--highlights--link{
+    text-decoration: none;
+    color: #000;
 }
 
-.block-2 > img{
+.main-page--highlights--link:visited { 
+    text-decoration: none;
+    color: #000;
+  } 
+
+.main-page--highlights--li{
+    margin-inline: 5px;
+
+}
+
+.main-page--highlights--li:hover{
+    background-color: #333;
+
+    color: rgba(256, 256, 256, 0.9);
+}
+
+.main-page--highlights--wrap{
+    padding: 1.5rem;
+
+    cursor: pointer;
+}
+
+
+.main-page--highlights--category{
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 100%;
+}
+
+
+.highlights--img{
     width: 100%;
-    height: 100px;
-    margin-top: 2px;
-    object-fit: cover;
+    height: 250px;
 
+    object-fit: cover;
 }
 
-@media (min-width : 768px){
-    body{
-        font-family: 'Roboto', sans-serif;
-        background-color: #fff;
-        font-size: 20%;
-    }
-    
+.highlights--name{    
+    font-size: 1.2rem;
+    font-family: "Roboto Mono";
 
-    .slide{
-        position: relative;
-        height: 80vh;
-    }
+    letter-spacing: -1px;
 
-    .background{
-        position: absolute;
-        z-index:1;
-        width: 70vw;
-        height: 80vh;
-        background-color: #edf0e7;
-    }
-    
-    .blocks{
-        position: absolute;
-        z-index:2;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        left: 10%;
-    }
-    
-    .name{
-        font-size: 100px;
-        line-height: 90px;
-    }
-    
-    .job{
-        font-size: 35px;
-        font-weight: 400;
-    }
-    
-    .social-networks{
-        margin-top: 15px;
-    }
-    
-    .social-networks > img{
-        width: 40px;
-        margin-left: 5px;
-    }
+    padding-block: 0.8rem;
+}
 
-    .block-2{
-        width: 50%;
-    }
-        
-    .block-2 > a{
-        width: 100%;
-        background-color: aqua;
-    }
+.highlights--name--eng{
+    font-size: 0.9rem;
+    font-weight: 400;
+    font-style: italic;
+
+    padding-bottom: 0.8rem;
 }
 
 
