--- a/css/others.css
+++ b/css/others.css
@@ -1,22 +1,28 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
+body{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sticky-container {
-    position: sticky;
+    position: fixed;
     top: 0;
-    z-index: 10;
+    left: 0;
+    z-index: 20;
+
+    width: 100%;
+
     background-color: rgba(256, 256, 256, 0.9);
 }
 .sticky-content {
     margin: 0;
-    padding: 10px;
+    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,10 +33,19 @@ body {
 }
 
 .dropbtn {
+  background-color: #333;
   color: white;
+
   width: 40px;
+
+  padding: 10px 15px;
+  
   border: none;
+  border-radius: 10px;
   cursor: pointer;
+
+  font-weight: 600;
+  font-family: "Roboto Mono";
 }
 
 .dropdown {
@@ -46,6 +61,8 @@ body {
   z-index: 1;
   right: 0;
   font-weight: 600;
+  font-family: "Roboto Mono";
+  margin-top: 10px;
 }
 
 .dropdown-content a {
@@ -54,257 +71,168 @@ body {
   text-decoration: none;
   display: block;
   text-align: end;
-  font-size: 16px;
+  font-size:16px;
 }
 
-.dropdown-content a:hover {background-color: rgba(237, 240, 231, 0.6);}
+.dropdown-content a:hover {
+    background-color: #c2c2c234;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-.section-1{
-    height: 100%;
-    background-color: #edf0e7;
-    padding: 5%;
-    position: relative;
+.section{
+    display: grid;
+    grid-template-columns: 1fr;
+
+    @media (min-width: 768px){
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media (min-width: 1024px){
+        grid-template-columns: 1fr;
+    }
 }
 
-.section-2{
-    height: 100%;
-    padding: 5%;
-    position: relative;
-}
-
-.title{
-    margin-top: 5%;
-    font-size: 30px;
-}
-
-.container{
-    display: flex;
-    flex-direction: column-reverse;
-    margin-top: 15%;
-}
-
-.block-2{
+.section-block{
     width: 100%;
-    height: 30vh;
-    align-self: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
+
+    @media(min-width: 768px){
+        width: 90%;
+        margin-inline: auto;
+        margin-bottom: 20px;
+    }
+
+    @media(min-width: 1024px){
+        display: flex;
+        margin-bottom: 0px;
+
+        width: 100%;
+        height: 100%;
+    }
 }
 
-.block-2 > img{
+.reverse{
+    flex-direction: row-reverse;
+}
+
+.section-wrap{
+    padding: 2rem;
+
+    @media(min-width: 768px){
+        padding: 1rem;
+    }
+
+    @media(min-width: 1024px){
+        padding: 3rem;
+        width: 50%;
+
+        align-self: center;
+    }
+}
+
+.img_wrap{
+    width: 100%;
+    height: 350px;
+
     object-fit: cover;
+
+    @media (min-width: 1024px){
+        width: 50%;
+        height: 100vh;
+
+        overflow: hidden;
+    }
 }
 
-.block-2 > img:nth-child(1){
-    width: 48%;
-    height: 80%;
-}
-
-.block-2 > img:nth-child(2){
-    width: 48%;
+.section-img{
+    width: 100%;
     height: 100%;
+
+    object-fit: cover;
 }
 
 .article-name{
-    margin-top: 5%;
-    font-size:22px;
+    font-weight: 800;
+
+    font-size: 1.4rem;
+    font-family: "Roboto Mono";
+    
+    letter-spacing: -1px;
+    line-height: 1.7rem;
+
+    margin-bottom: 10px;
+
+    /* @media (min-width:1024px){
+        font-size: 2rem;
+    } */
 }
 
 .article-name-og{
-    margin-top: 2%;
-    font-size: 16px;
-    line-height: 20px;
-    font-style: italic;
     font-weight: 400;
-}
 
-.text{
-    margin-top: 5%;
+    font-size: 1rem;
+    font-style: italic;
+
+    margin-bottom: 15px;
+
+    @media (min-width:1024px){
+        font-size: 1rem;
+    }
+
 }
 
 .paragraph{
-    margin-top: 2%;
+    @media (min-width: 1024px){
+        font-size: 0.9rem;
+    }
 }
 
-.link{
-    margin-top: 5%;
+.toolsBox{
+    display: none;
+
+    font-size: 0.8rem;
+    font-style: italic;
+}
+
+.visible{
     display: block;
-    padding: 3px 15px;
-    width: 20%;
-    border: 1.5px black solid;
-    text-align: center;
-    border-radius: 7px;
 }
 
-a{
-    text-align:center;
-    text-decoration: none;
-    color: #000;
-}
-
-.block-3{
-    width: 100%;
-    height: 40vh;
+.links--section {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin-block: 1em; /* Espacio entre secciones */
 }
 
-.block-3 > img{
-    object-fit: cover;
+.links--section--links{
+    display: flex;
+    gap: 8px;
 }
 
-.block-3 > img:nth-child(1){
-    width: 70%;
-    height: 48%;
-
+.link-text, .tools-text, .toolsBox {
+    margin-bottom: 0.5em; /* Espacio entre elementos */
 }
 
-.block-3 > img:nth-child(2){
-    width: 100%;
-    height: 48%;
-    margin-top: 2%;
+button{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
+.link-text, .tools-text{
+    color: #000;
 
+    font-weight: 800;
+    font-family: "Roboto Mono";
+    text-decoration: none;
 
-@media (min-width: 768px){
-    .sticky-container {
-        position: sticky;
-        top: 0;
-        z-index: 60;
-        background-color: rgba(256, 256, 256, 0.9);
-        height: 10%;
-    }
-    .sticky-content {
-        margin: 0;
-        padding: 10px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .contact{
-        font-size: 13px;
-    }
-    
-    .menu{
-        width: 40px;
-    }
-    
-    .section-1, .section-2{
-        background-color: #fff;
-        padding: 0;
+    text-decoration: underline 2px #000 solid;
 
-        position: relative;
-        height: 100vh;
-    }
-
-    .background{
-        position: absolute;
-        z-index: 10;
-        width: 70vw;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        height: 100vh;
-
-        background-color: #edf0e7;
-    }
-
-    .title{
-        position: absolute;
-        z-index: 20;
-
-        left: 10%;
-        margin-top:2%;
-
-        font-size: 40px;
-    }
-
-    .container{
-        width: 80%;
-        position: absolute;
-        z-index: 20;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
-        margin-top: 10%;
-        left: 10%;
-        
-    }
-
-    .block-1{
-        width: 70%;
-    }
-
-    .article-name{
-        font-size: 22px;
-        line-height: 23px;
-    }
-
-    .text{
-        font-size: 14px;
-    }
-
-    .block-2{
-        display: flex;
-        justify-content: end;
-        align-self: flex-end;
-        margin-left: 5%;
-    }
-    
-    .block-2 > img{
-        background-color:aqua;
-        margin-left: 2%;
-    }
-    
-    .block-2 > img:nth-child(1){
-        height: 50vh;
-        width: 30%;
-    }
-    
-    .block-2 > img:nth-child(2){
-        height: 75vh;
-        width: 60%;
-    }
-
-    .block-3{
-        width: 100%;
-        height: 60vh;
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        margin-left: 5%;
-    }
-    
-    .block-3 > img{
-        background-color: aqua;
-        margin-left: 2%;
-    }
-    
-    .block-3 > img:nth-child(1){
-        width: 70%;
-        height: 48%;
-    
-    }
-    
-    .block-3 > img:nth-child(2){
-        width: 100%;
-        height: 48%;
-        margin-top: 2%;
-    }
-    
 }
-
-
-    
-
-
-
-
-
