--- a/partials/about.html
+++ b/partials/about.html
@@ -12,9 +12,9 @@
 <body>
     <header class="header">
         <nav class="nav__header">
-            <a href="./index.html" class="nav__header--element js__link">Home</a>
-            <a href="./projects.html" class="nav__header--element js__link">Projects</a>
-            <a href="./about.html" class="nav__header--element js__link selected">About</a>
+            <a href="../index.html" class="nav__header--element js__link">Home</a>
+            <a href="projects.html" class="nav__header--element js__link">Projects</a>
+            <a href="about.html" class="nav__header--element js__link selected">About</a>
         </nav>
     </header>
     <main class="main">
