--- a/partials/projects.html
+++ b/partials/projects.html
@@ -12,9 +12,9 @@
 <body>
     <header class="header"></header>
         <nav class="nav__header">
-            <a href="./index.html" class="nav__header--element js__link">Home</a>
-            <a href="./projects.html" class="nav__header--element js__link selected">Projects</a>
-            <a href="./about.html" class="nav__header--element js__link">About</a>
+            <a href="../index.html" class="nav__header--element js__link">Home</a>
+            <a href="projects.html" class="nav__header--element js__link selected">Projects</a>
+            <a href="about.html" class="nav__header--element js__link">About</a>
         </nav>
     </header>
     <main class="main">
