Change png extension

--- a/partials/projects.html
+++ b/partials/projects.html
@@ -20,7 +20,7 @@
     <main class="main">
         <article class="article first js__article">
             <div class="article__small js__articleSmall hidden">
-                <img src="../imgs/small_imgs/small_temp_agua.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_temp_agua.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">Where is sea water colder, in Llanes or in Marbella? We have a full guide to explain it</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -33,7 +33,7 @@
                     <img src="../imgs/arrow.svg" alt="" class="article__full--arrow rotate">
                 </div>
                 <div class="article__full--body">
-                    <img src="../imgs/full_imgs/full_temp_agua.png" alt="" class="article__full--body--img">
+                    <img src="../imgs/full_imgs/full_temp_agua.PNG" alt="" class="article__full--body--img">
                     <p class="article__full--body--description">For the summer season, we explored sea surface temperatures across all Spanish coastal municipalities. Using a dataset with 0.5° spaced points, we aggregated the average water temperatures by municipality and province. We also analyzed historical records of maximum and minimum sea temperatures. This data allowed us to provide a comprehensive view of coastal water conditions, helping readers understand regional variations. The article emphasized how the changing water temperatures can affect tourism and local activities, particularly in popular summer destinations. Additionally, it shed light on broader environmental trends, linking the findings to potential impacts of climate change on Spanish coastal regions.</p>
                     <p class="article__full--body--technologies">The data for sea temperatures were extracted via the Copernicus Marine Service API using a command-line library. All data analysis was conducted in Python, utilizing xarray to open .nc files, and pandas and geopandas for cleaning geographic files and grouping data by months. To link the geographic points from the dataset with municipal polygons, a proximity join function in QGIS was used. This combination of tools allowed for a precise analysis of sea surface temperatures, providing detailed results for each Spanish coastal municipality.
                         <a href="https://www.elconfidencial.com/espana/2024-08-03/agua-fria-agua-caliente-playa-espana-guia-bano-definitiva_3935335/" class="article__full--body--link">Link to article</a>
@@ -43,7 +43,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_taylor.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_taylor.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">Why do you not recognize any song from the most streamed artist worldwide?</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -56,7 +56,7 @@
                     <img src="../imgs/arrow.svg" alt="" class="article__full--arrow rotate">
                 </div>
                 <div class="article__full--body">
-                    <img src="../imgs/full_imgs/full_taylor.png" alt="" class="article__full--body--img">
+                    <img src="../imgs/full_imgs/full_taylor.PNG" alt="" class="article__full--body--img">
                     <p class="article__full--body--description">During Taylor Swift's European tour, we investigated why Spanish audiences found it difficult to remember her songs. The study identified two primary reasons: her unusually long verses compared to other pop artists like Ariana Grande, and her minimalist musical style, analyzed through Spotify's music metrics. We also pinpointed two key factors behind her success: the relatable themes in her lyrics that resonate with audiences, and her self-referential songwriting, which creates a unique "song universe" for fans. This combination of musical complexity and emotional connection explains her widespread popularity despite the challenges some listeners face in recalling her lyrics.</p>
                     <p class="article__full--body--technologies">Data were manually extracted from Genius, but all datasets were analyzed with Python, particularly for text analysis. Libraries like re, pandas, and numpy were used to break down the words and verses. To analyze the musical metrics, Python and Spotify's API were employed. Several visualizations were created using the ggplot2 library in R, providing a clear representation of the song structures and patterns that contribute to Taylor Swift's style and success.
                         <a href="https://www.elconfidencial.com/cultura/2024-05-25/cancion-taylor-swift-artista-mas-escuchada-mundo_3889580/" class="article__full--body--link">Link to article</a>
@@ -66,7 +66,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_densidad_poblacion.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_densidad_poblacion.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">The map of European population: do you live in the most populated square kilometre of the continent?</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -89,7 +89,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_juegos_agua.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_juegos_agua.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">The water games that can dry out Europe's pantry</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -112,7 +112,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_isla.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_isla.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">Chronic of an announced infidelity: el lenguage of "Temptation Island" gives out the cheaters</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -135,7 +135,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_desplazamientos_obligados.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_desplazamientos_obligados.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">Where do your neighbours work? The map of all mandatory journeys for each town in Spain</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -158,7 +158,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_demanda_calefaccion.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_demanda_calefaccion.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">The map of heat expenditure, building by building: do you pay more that your neighbours?</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
@@ -181,7 +181,7 @@
         </article>
         <article class="article js__article">
             <div class="article__small js__articleSmall">
-                <img src="../imgs/small_imgs/small_aire_acondicionado.png" alt="" class="article__small--img">
+                <img src="../imgs/small_imgs/small_aire_acondicionado.PNG" alt="" class="article__small--img">
                 <h1 class="article__small--title">Up to 122 with the AC on: this is how what your electricity bill will look like, depending on where you live</h1>
                 <img src="../imgs/arrow.svg" alt="" class="article__small--arrow">
             </div>
